docker/k8s/ingress/hxb-sdk-docs-ingress-prod.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: sdk-docs
  namespace: default
spec:
  rules:
  - host: sdk-docs.hexabase.com
    http:
      paths:
      - backend:
          service:
            name: beee-hxb-sdk-docs
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - sdk-docs.hexabase.com
    secretName: hexabase-ssl
