docker/k8s/ingress/hxb-sdk-docs-ingress-stg.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    konghq.com/plugins: kong-cors
    kubernetes.io/ingress.class: kong
  name: dev-sdk-docs
  namespace: default
spec:
  rules:
  - host: dev-sdk-docs.hexabase.com
    http:
      paths:
      - backend:
          service:
            name: beee-hxb-sdk-docs
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - dev-sdk-docs.hexabase.com
    secretName: hexabase-ssl
